# saucer-nodejs

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  PUBLISHING.md  README.md  index.d.ts  index.js  package.json
.github/workflows/: ci.yml  prebuild.yml
cli/: saucer.js
examples/: application-features.js  basic.js
lib/: debug.js  native-loader.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: build.js  install.js  prepublish.js
src/: addon.cpp  callbacks.h  platform.hpp  platform_linux.cpp  platform_mac.mm  platform_win.cpp  runloop_mac.h  runloop_mac.mm
src/compat/: app.cpp  desktop.cpp  icon.cpp  loop.cpp  navigation.cpp  options.cpp  pdf.cpp  permission.cpp  preferences.cpp  scheme.cpp  script.cpp  stash.cpp  url.cpp  webview.cpp  window.cpp
src/compat/private/: app.hpp  navigation.hpp  options.hpp  permission.hpp  preferences.hpp  stash.hpp  url.hpp  webview.hpp
src/compat/saucer/: app.h  desktop.h  export.h  icon.h  loop.h  pdf.h  permission.h  scheme.h  stash.h  url.h  webview.h  window.h
